# mashinka

./: .gitignore  map.txt  protocol.proto
client/: CMakeLists.txt  ga_exp.py  ga_lr.py  gann.py  graphics.py  learner.py  main.py  map_reader.py  network.py  replay_viewer.py  score.py
server/: CMakeLists.txt  car.cpp  car.hpp  main.cpp  map_reader.cpp  map_reader.hpp  server.cpp  server.hpp
